<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">COVID PROTECTOR</string>
    <string name="main_image">sanitizer,gloves HandWash image</string>
    <string name="main_image_home">sanitizer,gloves and HandWash image</string>
    <string name="wear_mask">2.Wear Mask</string>
    <string name="wear_a_mask_in_public_especially_indoors_when_physical_distancing_is_not_possible">Wear a mask in public, especially indoors when physical distancing is not possible.</string>
    <string name="description">an image</string>
    <string name="social_distancing">1.Social Distancing</string>
    <string name="maintain_a_safe_distance_from_others_at_least_2_metre_or_6_feet_even_if_they_don_t_appear_to_be_sick">Maintain a safe distance from others (at least 2 metre or 6 feet), even if they don\'t appear to be sick.</string>
    <string name="next"><![CDATA[NEXT>]]></string>
    <string name="stay_home">6.Stay Home</string>
    <string name="stay_home_if_you_feel_unwell">Stay home if you feel unwell.</string>
    <string name="go_back_home">GO BACK HOME</string>
    <string name="wash_your_hands">3.Wash Your Hands</string>
    <string name="clean_your_hands_often_use_soap_and_water_or_an_alcohol_based_hand_rub_or_sanitizer">Clean your hands often. Use soap and water, or an alcohol-based hand rub, or sanitizer.</string>
    <string name="get_vaccinated">4.Get vaccinated</string>
    <string name="get_vaccinated_when_it_s_your_turn_follow_local_guidance_about_vaccination">Get vaccinated when it\'s your turn. Follow local guidance about vaccination.</string>
    <string name="how_to_sneeze">5.How To Sneeze</string>
    <string name="cover_your_nose_and_mouth_with_your_bent_elbow_or_a_tissue_when_you_cough_or_sneeze">Cover your nose and mouth with your bent elbow or a tissue when you cough or sneeze.</string>
    <string name="carry_cleaners">1.Carry Cleaners</string>
    <string name="carry_cleaners_antiviral_wipes_alcohol_pads_hand_sanitizer_if_you_can_find_some_keep_them_in_your_car_so_you_have_them_handy_and_carry_them_around_when_you_go_out">CARRY CLEANERS // Antiviral wipes // Alcohol pads // Hand sanitizer //(if you can find //some) //Keep them in your car so you //have them handy, and carry //them around when you go out.</string>
    <string name="lather_up">2.Lather Up!</string>
    <string name="wash_your_hands_for_at_least_20_seconds_with_soap_and_water_especially_after_using_the_restroom">Wash your hands for at least //20 seconds with soap and water, //especially after using //the restroom.</string>
    <string name="stand_tall">3.Stand Tall</string>
    <string name="avoid_leaning_against_walls_counters_and_railings_do_not_sit_on_floors_or_steps">Avoid leaning against walls, counters, and railings. Do not sit on floors or steps.</string>
    <string name="hand_awareness">4.Hand Awareness</string>
    <string name="limit_the_number_of_surfaces_you_touch_especially_when_you_are_in_public_place">Limit the number of surfaces you touch especially when you are in public place.</string>
    <string name="face_off">5.Face Off!</string>
    <string name="we_know_it_s_tough_but_keep_your_hands_off_your_face_eyes_mouth_and_hair">We know it’s tough— but keep your hands off your face, eyes, mouth, and hair.</string>
    <string name="keep_everything_clean">6.Keep Everything Clean</string>
    <string name="especially_all_high_touch_surfaces_in_your_home_and_car_also_be_sure_to_clean_your_hands_before_and_after_entering_your_home_and_car">Especially all high-touch surfaces in your home and car. Also, be sure to clean your hands before and after entering your home and car.</string>
    <string name="check_your_mask">7.Check Your Mask</string>
    <string name="check">CHECK</string>
    <string name="to_check_that_you_have_weared_mask_properly_make_sure_your_mouth_and_nose_are_coverd_click_on_check_button_to_open_camera_and_check">Check that you have wear mask properly.Make sure your mouth and nose are cover.</string>
    <string name="antiviral_wipes_alcohol_pads_and_hand_sanitizer_if_you_can_find_some_keep_them_in_your_car_so_you_have_them_handy_and_carry_them_around_when_you_go_out">Antiviral wipes, Alcohol pads and Hand sanitizer (if you can find some) Keep them in your car so you have them handy, and carry them around when you go out.</string>
    <string name="wash_your_hands_for_at_least_20_seconds_with_soap_and_water_especially_after_using_the_restroom_">Wash your hands for at least 20 seconds with soap and water, especially after using the restroom.</string>
    <string name="textview">TextView</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="status">Status:</string>
    <string name="covid_protector">COVID PROTECTOR</string>
    <string name="what_is_corona_virus">What is corona virus?</string>
    <string name="corona_viruses_are_a_large_family_of_viruses_which_may_cause_illness_in_animals_or_humans_in_humans_several_coronaviruses_are_known_to_cause_respiratory_infections_ranging_from_the_common_cold_to_more_severe_diseases_such_as_middle_east_respiratory_syndrome_mers_and_severe_acute_respiratory_syndrome_sars_the_most_recently_discovered_coronavirus_causes_coronavirus_disease_covid_19">Corona viruses are a large family of viruses which may cause illness in animals or humans. In humans, several coronaviruses are known to cause respiratory infections ranging from the common cold to more severe diseases such as Middle East Respiratory Syndrome (MERS) and Severe Acute Respiratory Syndrome (SARS). The most recently discovered coronavirus causes coronavirus disease COVID-19.</string>
    <string name="covid_19_is_the_infectious_disease_caused_by_the_most_recently_discovered_corona_virus_this_new_virus_and_disease_were_unknown_before_the_outbreak_began_in_wuhan_china_in_december_2019">COVID-19 is the infectious disease caused by the most recently discovered corona virus. This new virus and disease were unknown before the outbreak began in Wuhan, China, in December 2019.</string>
    <string name="what_is_covid_19">What is COVID-19?</string>
    <string name="people_can_catch_covid_19_from_others_who_have_the_virus_the_disease_can_spread_from_person_to_person_through_small_droplets_from_the_nose_or_mouth_which_are_spread_when_a_person_with_covid_19_coughs_or_exhales_these_droplets_land_on_objects_and_surfaces_around_the_person_other_people_then_catch_covid_19_by_touching_these_objects_or_surfaces_then_touching_their_eyes_nose_or_mouth_people_can_also_catch_covid_19_if_they_breathe_in_droplets_from_a_person_with_covid_19_who_coughs_out_or_exhales_droplets_this_is_why_it_is_important_to_stay_more_than_1_meter_3_feet_away_from_a_person_who_is_sick">People can catch COVID-19 from others who have the virus. The disease can spread from person to person through small droplets from the nose or mouth which are spread when a person with COVID-19 coughs or exhales. These droplets land on objects and surfaces around the person. Other people then catch COVID-19 by touching these objects or surfaces, then touching their eyes, nose or mouth. People can also catch COVID-19 if they breathe in droplets from a person with COVID-19 who coughs out or exhales droplets. This is why it is important to stay more than 1 meter (3 feet) away from a person who is sick.</string>
    <string name="how_does_covid_19_spread">How does COVID-19 spread?</string>
    <string name="studies_to_date_suggest_that_the_virus_that_causes_covid_19_is_mainly_transmitted_through_contact_with_respiratory_droplets_rather_than_through_the_air">Studies to date suggest that the virus that causes COVID-19 is mainly transmitted through contact with respiratory droplets rather than through the air.</string>
    <string name="can_the_virus_that_causes_covid_19_be_transmitted_through_the_air">Can the virus that causes COVID-19 be transmitted through the air?</string>
    <string name="can_covid_19_be_caught_from_a_person_who_has_no_symptoms">Can CoVID-19 be caught from a person who has no symptoms?</string>
    <string name="can_i_catch_covid_19_from_the_feces_of_someone_with_the_disease">Can I catch COVID-19 from the feces of someone with the disease?</string>
    <string name="the_risk_of_catching_covid_19_from_the_feces_of_an_infected_person_appears_to_be_low_while_initial_investigations_suggest_the_virus_may_be_present_in_feces_in_some_cases_spread_through_this_route_is_not_a_main_feature_of_the_outbreak_the_ongoing_research_on_the_ways_covid_19_is_spread_and_will_continue_to_share_new_findings_because_this_is_a_risk_however_it_is_another_reason_to_clean_hands_regularly_after_using_the_bathroom_and_before_eating">The risk of catching COVID-19 from the feces of an infected person appears to be low. While initial investigations suggest the virus may be present in feces in some cases, spread through this route is not a main feature of the outbreak. The ongoing research on the ways COVID-19 is spread and will continue to share new findings. Because this is a risk, however, it is another reason to clean hands regularly, after using the bathroom and before eating.</string>
    <string name="how_likely_am_i_to_catch_covid_19">How likely am I to catch COVID-19?</string>
    <string name="the_risk_depends_on_where_you_are_and_more_specifically_whether_there_is_a_covid_19_outbreak_unfolding_there_for_most_people_in_most_locations_the_risk_of_catching_covid_19_is_still_low_however_there_are_now_places_around_the_world_cities_or_areas_where_the_disease_is_spreading_for_people_living_in_or_visiting_these_areas_the_risk_of_catching_covid_19_is_higher_governments_and_health_authorities_are_taking_vigorous_action_every_time_a_new_case_of_covid_19_is_identified_be_sure_to_comply_with_any_local_restrictions_on_travel_movement_or_large_gatherings_cooperating_with_disease_control_efforts_will_reduce_your_risk_of_catching_or_spreading_covid_19_covid_19_outbreaks_can_be_contained_and_transmission_stopped_as_has_been_shown_in_china_and_some_other_countries_unfortunately_new_outbreaks_can_emerge_rapidly_it_s_important_to_be_aware_of_the_situation_where_you_are_or_intend_to_go">The risk depends on where you are - and more specifically, whether there is a COVID-19 outbreak unfolding there. For most people in most locations the risk of catching COVID-19 is still low. However, there are now places around the world (cities or areas) where the disease is spreading. For people living in, or visiting, these areas the risk of catching COVID-19 is higher. Governments and health authorities are taking vigorous action every time a new case of COVID-19 is identified. Be sure to comply with any local restrictions on travel, movement or large gatherings. Cooperating with disease control efforts will reduce your risk of catching or spreading COVID-19. COVID-19 outbreaks can be contained and transmission stopped, as has been shown in China and some other countries. Unfortunately, new outbreaks can emerge rapidly. It’s important to be aware of the situation where you are or intend to go.</string>
    <string name="should_i_worry_about_covid_19">Should I worry about COVID-19?</string>
</resources>