<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CovidSymptoms">

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="0dp"
        android:layout_height="205dp"
        android:contentDescription="@string/description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/covid_symptoms_doctor_image" />

    <TextView
        android:id="@+id/symptoms"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/textview"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView11"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/yes"
        app:layout_constraintBaseline_toBaselineOf="@+id/no"
        app:layout_constraintEnd_toStartOf="@+id/no"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="3dp"
        android:layout_marginRight="3dp"
        android:text="@string/no"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/yes"
        app:layout_constraintTop_toBottomOf="@+id/imageView11" />
</androidx.constraintlayout.widget.ConstraintLayout>